Product Detail Page

--- a/res/layout/productdetailpage.xml
+++ b/res/layout/productdetailpage.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/Blue_Main" >
+    android:layout_height="match_parent" >
 
     <ProgressBar
         android:id="@+id/productdetailpage_progressbar"
@@ -13,7 +12,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/Blue_Main"
         android:orientation="vertical" >
 
         <ImageView
@@ -25,148 +25,240 @@
             android:padding="5dp"
             android:src="@drawable/add_image_256" />
 
-        <TableLayout
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="100"
+            android:orientation="vertical" >
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp" >
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp" >
+
+                    <TextView
+                        android:id="@+id/productdetailpage_product_name"
+                        style="@style/mediumBlackTextBold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/rounded_corner_bg"
+                        android:text="@string/productdetailpage_productname" />
+
+                    <EditText
+                        android:id="@+id/productdetailpage_product_name_value"
+                        style="@style/mediumBlackText"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/White50"
+                        android:inputType="text"
+                        android:padding="5dp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp" >
+
+                    <TextView
+                        android:id="@+id/productdetailpage_product_type"
+                        style="@style/mediumBlackTextBold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/rounded_corner_bg"
+                        android:text="@string/productdetailpage_producttype" />
+
+                    <Spinner
+                        android:id="@+id/productdetailpage_product_type_spinner_value"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/White50" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp" >
+
+                    <TextView
+                        android:id="@+id/productdetailpage_product_price"
+                        style="@style/mediumBlackTextBold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/rounded_corner_bg"
+                        android:text="@string/productdetailpage_productprice" />
+
+                    <EditText
+                        android:id="@+id/productdetailpage_product_price_value"
+                        style="@style/mediumBlackText"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/White50"
+                        android:inputType="numberDecimal"
+                        android:padding="5dp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp" >
+
+                    <TextView
+                        android:id="@+id/productdetailpage_product_discount"
+                        style="@style/mediumBlackTextBold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/rounded_corner_bg"
+                        android:text="@string/productdetailpage_productdiscount" />
+
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal" >
+
+                        <EditText
+                            android:id="@+id/productdetailpage_product_discount_value"
+                            style="@style/mediumBlackText"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@color/White50"
+                            android:inputType="numberDecimal"
+                            android:padding="5dp"
+                            android:layout_marginRight="5dp" />
+
+                        <EditText
+                            android:id="@+id/productdetailpage_product_discount_percentage"
+                            style="@style/mediumBlackText"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@color/White50"
+                            android:inputType="numberDecimal"
+                            android:padding="5dp" />
+                    </LinearLayout>
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp" >
+
+                    <TextView
+                        android:id="@+id/productdetailpage_product_shipping"
+                        style="@style/mediumBlackTextBold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/rounded_corner_bg"
+                        android:text="@string/productdetailpage_productshipping" />
+
+                    <EditText
+                        android:id="@+id/productdetailpage_product_shipping_value"
+                        style="@style/mediumBlackText"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/White50"
+                        android:inputType="numberDecimal"
+                        android:padding="5dp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp" >
+
+                    <TextView
+                        android:id="@+id/productdetailpage_product_description"
+                        style="@style/mediumBlackTextBold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/rounded_corner_bg"
+                        android:text="@string/productdetailpage_productdescription" />
+
+                    <EditText
+                        android:id="@+id/productdetailpage_product_description_value"
+                        style="@style/mediumBlackText"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/White50"
+                        android:inputType="text"
+                        android:maxLines="2"
+                        android:padding="5dp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp" >
+
+                    <TextView
+                        android:id="@+id/productdetailpage_product_available"
+                        style="@style/mediumBlackTextBold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/rounded_corner_bg"
+                        android:text="@string/productdetailpage_productavailable" />
+
+                    <RelativeLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/White50"
+                        android:padding="3dp" >
+
+                        <Switch
+                            android:id="@+id/productdetailpage_product_available_switch_value"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
+                            android:textOff="No"
+                            android:textOn="Yes" />
+                    </RelativeLayout>
+                </TableRow>
+            </TableLayout>
+        </ScrollView>
+
+        <RelativeLayout
+            android:id="@+id/productdetailpage_button_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp" >
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1" >
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp" >
+            <View
+                style="@style/divider"
+                android:layout_alignParentTop="true" />
 
-                <TextView
-                    android:id="@+id/productdetailpage_product_name"
-                    style="@style/mediumBlackTextBold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/rounded_corner_bg"
-                    android:text="@string/productdetailpage_productname" />
-
-                <EditText
-                    android:id="@+id/productdetailpage_product_name_value"
-                    style="@style/mediumBlackText"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/White50"
-                    android:inputType="text"
-                    android:padding="5dp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp" >
-
-                <TextView
-                    android:id="@+id/productdetailpage_product_price"
-                    style="@style/mediumBlackTextBold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/rounded_corner_bg"
-                    android:text="@string/productdetailpage_productprice" />
-
-                <EditText
-                    android:id="@+id/productdetailpage_product_price_value"
-                    style="@style/mediumBlackText"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/White50"
-                    android:inputType="numberDecimal"
-                    android:padding="5dp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp" >
-
-                <TextView
-                    android:id="@+id/productdetailpage_product_shipping"
-                    style="@style/mediumBlackTextBold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/rounded_corner_bg"
-                    android:text="@string/productdetailpage_productshipping" />
-
-                <EditText
-                    android:id="@+id/productdetailpage_product_shipping_value"
-                    style="@style/mediumBlackText"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/White50"
-                    android:inputType="numberDecimal"
-                    android:padding="5dp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp" >
-
-                <TextView
-                    android:id="@+id/productdetailpage_product_description"
-                    style="@style/mediumBlackTextBold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/rounded_corner_bg"
-                    android:text="@string/productdetailpage_productdescription" />
-
-                <EditText
-                    android:id="@+id/productdetailpage_product_description_value"
-                    style="@style/mediumBlackText"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/White50"
-                    android:inputType="text"
-                    android:padding="5dp" />
-            </TableRow>
-        </TableLayout>
+            <Button
+                android:id="@+id/productdetailpage_submit_button"
+                style="@style/smallBlackTextBold"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/circle_button_bg_white50"
+                android:drawableTop="@drawable/save_as_50"
+                android:padding="5dp"
+                android:text="@string/productdetailpage_submit_additem" />
+        </RelativeLayout>
     </LinearLayout>
-
-    <View
-        style="@style/divider"
-        android:layout_above="@+id/productdetailpage_button_layout" />
-
-    <RelativeLayout
-        android:id="@+id/productdetailpage_button_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp" >
-
-        <Button
-            android:id="@+id/productdetailpage_submit_button"
-            style="@style/smallBlackTextBold"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/circle_button_bg_white50"
-            android:drawableTop="@drawable/save_as_50"
-            android:padding="5dp"
-            android:text="@string/productdetailpage_submit_additem" />
-
-        <Button
-            android:id="@+id/productdetailpage_cancle_button"
-            style="@style/smallBlackTextBold"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_toRightOf="@+id/productdetailpage_submit_button"
-            android:background="@drawable/circle_button_bg_white50"
-            android:drawableTop="@drawable/delete_sign_50"
-            android:padding="5dp"
-            android:text="@string/productdetailpage_cancle" />
-    </RelativeLayout>
 
 </RelativeLayout>
