--- a/res/layout/resultpage.xml
+++ b/res/layout/resultpage.xml
@@ -1,23 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:staggered="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/Red_Main" >
+    
+   <ProgressBar
+        android:id="@+id/resultpage_progressbar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminate="true" />
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-        <GridLayout
-            android:id="@+id/result_gridLayout"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:columnCount="5"
-            android:columnOrderPreserved="false"
-            android:rowOrderPreserved="false"
-            android:orientation="horizontal" >
-        </GridLayout>
-    </ScrollView>
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_corner_bg"
+            android:orientation="vertical" >
 
-</LinearLayout>
+            <TextView
+                style="@style/largeBlackTextBold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/resultpage_queryinstruction" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/Red_Main50"
+                android:orientation="horizontal" >
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="5dp" >
+
+                    <EditText
+                        android:id="@+id/resultpage_search_query_highlight"
+                        style="@style/mediumBlackText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@+id/resultpage_search_query"
+                        android:background="@null"
+                        android:maxLines="1"
+                        android:textColor="@color/Transparent" />
+
+                    <EditText
+                        android:id="@+id/resultpage_search_query"
+                        style="@style/mediumBlackText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:hint="@string/resultpage_queryplaceholder"
+                        android:maxLines="1"
+                        android:textColorHint="@color/White" />
+                </RelativeLayout>
+
+                <ImageView
+                    android:id="@+id/resultpage_search_submit_query_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:padding="5dp"
+                    android:src="@drawable/search_50" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dp" >
+
+            <GridLayout
+                android:id="@+id/result_gridLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="5"
+                android:columnOrderPreserved="false"
+                android:orientation="horizontal"
+                android:rowOrderPreserved="false" >
+            </GridLayout>
+        </ScrollView>
+    </LinearLayout>
+
+</RelativeLayout>
