--- a/res/layout/mainpage_fragment_favorite.xml
+++ b/res/layout/mainpage_fragment_favorite.xml
@@ -3,16 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Red_Main" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+    
+    <ProgressBar
+        android:id="@+id/mainpage_favorite_progressbar"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="196dp"
-        android:text="Favorite"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_centerInParent="true"
+        android:indeterminate="true" />
+
+    <ListView 
+        android:id="@+id/mainpage_favorite_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        android:layout_margin="5dp"></ListView>
 
 </RelativeLayout>
