--- a/res/layout/mainpage_fragment_history.xml
+++ b/res/layout/mainpage_fragment_history.xml
@@ -4,13 +4,19 @@
     android:layout_height="match_parent"
     android:background="@color/Red_Main" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+    <ProgressBar
+        android:id="@+id/mainpage_history_progressbar"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="History"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_centerInParent="true"
+        android:indeterminate="true" />
+
+    <ListView
+        android:id="@+id/mainpage_history_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:scrollbars="none" >
+    </ListView>
 
 </RelativeLayout>
