--- a/res/layout/mainpage_fragment_main.xml
+++ b/res/layout/mainpage_fragment_main.xml
@@ -108,13 +108,6 @@
                     android:padding="5dp"
                     android:src="@drawable/search_50" />
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/mainpage_search_message2"
-                style="@style/largeBlackTextBold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/mainpage_main_search_message2" />
         </LinearLayout>
     </LinearLayout>
 
@@ -135,5 +128,21 @@
         android:drawableTop="@drawable/shop_50"
         android:padding="5dp"
         android:text="@string/mainpage_main_storepage_button" />
+
+    <Button
+        android:id="@+id/mainpage_info_button"
+        style="@style/smallBlackTextBold"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/circle_button_bg_white50"
+        android:drawableTop="@drawable/info_50"
+        android:layout_toLeftOf="@+id/mainpage_storepage_button"
+        android:padding="5dp"
+        android:text="@string/mainpage_main_info_button" />
 
 </RelativeLayout>
