--- a/res/layout/resultpage.xml
+++ b/res/layout/resultpage.xml
@@ -75,8 +75,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp" >
+            android:layout_height="match_parent">
 
             <GridLayout
                 android:id="@+id/result_gridLayout"
